# lang_boost_python

./: CMakeLists.txt  README  SourceFiles.txt  TODO.txt  conanfile.py  setup.py  setup.py.in
cmake/: FindBLAS.cmake  FindBoost.cmake  FindBoostNumpy.cmake  FindCLAPACK.cmake  FindGLEW.cmake  FindLAPACK.cmake  FindLog4cpp.cmake  FindOpenCV.cmake  FindOpenHaptics.cmake  FindPTHREAD.cmake  FindPyUblas.cmake  FindTBB.cmake  FindTinyXML.cmake  FindUbitrack.cmake  PythonModuleBuilder.cmake  UbiTrackDetectCXXCompiler.cmake  UbiTrackDetectPython.cmake
config/: test.dfg  test.srg
include/ubitrack_python/: BackgroundImage.h  wrap_streambuf.h
lib/ubitrack/: __init__.py
lib/ubitrack/core/: __init__.py
lib/ubitrack/dataflow/: __init__.py
lib/ubitrack/facade/: __init__.py
src/: CMakeLists.txt  advanced_facade_example.cpp  global.h  typesystem_ubitrack_python.xml  ubitrack_python-binding.txt.in  wrap_utMath.cpp
src/core/: CMakeLists.txt  util_serialization.cpp  wrap_utCalibration.cpp  wrap_utMath.cpp  wrap_utMeasurement.cpp  wrap_utUtil.cpp
src/dataflow/: CMakeLists.txt  wrap_utDataflow.cpp  wrap_utGraph.cpp
src/facade/: CMakeLists.txt  wrap_utFacade.cpp
src/haptics/: wrap_utHaptics.cpp
src/utComponents/: CMakeLists.txt
src/vision/: CMakeLists.txt  wrap_utVision.cpp
src/visualization/: BackgroundImage.cpp  CMakeLists.txt  wrap_utVisualization.cpp
tests/: test_utDataflow.py  test_utFacade.py  test_utMath.py  test_utMeasurement.py  test_utUtil.py
